Brush changes the tone color to choose a texture. #43454

Closed
opened 2015-01-29 01:35:52 +01:00 by Luis Miguel Pérez González · 5 comments

System Information
CPU: Intel Core i7-2600 3.40GHz
RAM: 16 GB
GFX: nVidia Geforce GTX 560 Ti
OS: Windows 7 Professional 64bits and Ubuntu 14.04.1 LTS 64bits

Blender Version
Broken: 2.73a bbf09d9
version 2.69 r60995 does not have this error

Short description of error
In paint mode, if we choose a texture to the brush, the brush color tone changes. This failure is more evident with some colors (eg blue or red)

Exact steps for others to reproduce the error
1.Let's "Paint mode" on any object (difusse color texture)
2.Choose a color for the brush. Attention, the error is more evident with some colors (for example: Hex FF6C00, Hex 2544FF).
3.Paint the object.
4.We now add a texture to the brush. And back to paint the object.
At this point we should notice a change in the color tone.
In version 2.72b 9e963ae the same error occurs.
In version 2.71 9337574 the error is different. If painted in "3D View" color tone varies if we have a texture brush, but if we painted in "UV / Image editor" color does not change.

version 2.69 r60995 does not have this error

bug_texture_brush.rar

**System Information** CPU: Intel Core i7-2600 3.40GHz RAM: 16 GB GFX: nVidia Geforce GTX 560 Ti OS: Windows 7 Professional 64bits and Ubuntu 14.04.1 LTS 64bits **Blender Version** Broken: 2.73a bbf09d9 version 2.69 r60995 does not have this error **Short description of error** In paint mode, if we choose a texture to the brush, the brush color tone changes. This failure is more evident with some colors (eg blue or red) **Exact steps for others to reproduce the error** 1.Let's "Paint mode" on any object (difusse color texture) 2.Choose a color for the brush. Attention, the error is more evident with some colors (for example: Hex FF6C00, Hex 2544FF). 3.Paint the object. 4.We now add a texture to the brush. And back to paint the object. At this point we should notice a change in the color tone. In version 2.72b 9e963ae the same error occurs. In version 2.71 9337574 the error is different. If painted in "3D View" color tone varies if we have a texture brush, but if we painted in "UV / Image editor" color does not change. version 2.69 r60995 does not have this error [bug_texture_brush.rar](https://archive.blender.org/developer/F139768/bug_texture_brush.rar)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Wilson-14

Added subscriber: @Wilson-14

This issue was referenced by 7ce7cb5e0f

This issue was referenced by 7ce7cb5e0ff54b28581c4f02e8837ba6a88f7005

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7ce7cb5e0f.

Closed by commit 7ce7cb5e0f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43454
No description provided.